visual bug fixed: unwanted margin on smaller screens

--- a/src/styles/BreifAbout.scss
+++ b/src/styles/BreifAbout.scss
@@ -102,7 +102,9 @@
                 padding: 1em 2em;
 
                 &.card-1,
-                &.card-2 {
+                &.card-2,
+                &.card-3,
+                &.card-4 {
                     margin: 2em auto;
                 }
 
